rest of main program

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
+<!--Justin Hunt
+Ajit Singh 
+Onyeka Uzochukwu
+
+Term project 
+due 530 nov 25 2025
+
+crud app with sqlite and azure deployment
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevOps Project</title>
+    <!--all styles-->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,7 +52,10 @@
         <div class="badge">✓ Build</div>
         <div class="badge">✓ Test</div>
         <div class="badge">✓ Deploy</div>
-        <p style="margin-top: 30px;">Team: <strong>Our team name :/</strong></p>
+        <p style="margin-top: 30px;">Team: <strong>Ajit, Onyeka, and Justin :/</strong></p>
+        <h3 style="margin-top: 30px;">Inventory List Management Application</h3>
+        <p>\/ Click to see the store catalog! \/</p>
+        <p style="margin-top: 20px;"><strong><a href="/items" style="display: inline-block; background: rgb(0, 117, 0); color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none;">View Inventory</a></strong></p>
     </div>
 </body>
 </html>
